<resources>
    <string name="app_name">H2O</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_title">GENERAL</string>
    <string name="goal_of_the_day_title">Goal of the day</string>
    <string name="amount_of_one_cup_title">Amount of 1 cup</string>
    <string name="app_settings_title">APP SETTINGS</string>
    <string name="notification_title">Notification</string>
    <string name="set_time_reminder_title">Set time reminder</string>
    <string name="refer_friends_title">Refer friends</string>
    <string name="desc_launcher_icon">app icon logo</string>
    <string name="drag_to_ajust_title">Drag to adjust</string>
    <string name="btn_confirm">OK</string>
    <string name="how_much_water_did_you_drink_title">How much water did you drink?</string>
    <string name="default_water_progress">0%</string>
    <string name="water_unity">ml</string>
    <string name="goal_of_the_day_hint">E.g. 1500</string>
    <string name="warning_empty_fields">Please, fill out all fields</string>
    <string name="warning_invalid_goal">Ops! Try a number lower than 10000ml</string>
    <string name="warning_generic_error">An unexpected error has occured, please try again</string>
    <string name="warning_empty_number">Please enter a valid number</string>
    <string name="desc_btn_add_water">Add water drunk button</string>
    <string name="desc_btn_remove_water">Remove Water Button</string>
    <string name="btn_positive">OK</string>
    <string name="water_notification_title">Drink water!</string>
    <string name="water_notification_content">It\'s time to drink water to stay hydrated</string>
    <string name="channel_water_reminder">Water Reminder</string>
    <string name="channel_water_description">Receive notifications to remind you to drink water</string>
    <string name="warning_cant_remove_water">You can\'t remove any more water.</string>
</resources>